Bug test file downloads